# estudos

./: README.md
cookiecutter/escolha_ex/: pyproject.toml
cookiecutter/escolha_ex/exercicios_template/: cookiecutter.json
cookiecutter/escolha_ex/exercicios_template/hooks/: _pre_gen_project.py  post_gen_project.py  pre_prompt.py
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/: main.py  pyproject.toml
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/Java/: Main.java  Makefile
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/Java/arquivos/: Ex01.java  Ex02.java
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/Java/tests/: TestEx01.java  TestEx02.java
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/arquivos/: ex01.py  ex02.py  ex05.py  ex07.py  ex08.py  ex10.py
cookiecutter/escolha_ex/exercicios_template/{{cookiecutter.nome_projeto}}/tests/: test_ex01.py  test_ex02.py  test_ex03.py  test_ex04.py  test_ex06.py  test_ex09.py
fastapi/: docker-compose.yaml
fastapi/project/: main.py
gradle/: Dockerfile
junit/docker/: ClasseDeTeste.java  Dockerfile  Makefile  TestSoma.java
junit/docker/zz/: Soma.java
opencv/: Dockerfile  docker-compose.yaml  requirements.txt
opencv/src/: hello.py
pytest/codigo/: jogo.py
pytest/tests/: test_pytest.py
rest/: docker-compose.yaml
rest/client/: requirements.txt
rest/project/: main.py  rest_client.py
rest/server/: Dockerfile  requirements.txt
watchtower/: README.md
